--- a/services/service5.css
+++ b/services/service5.css
@@ -54,7 +54,6 @@ section {
   background: #f5f5f5;
 }
 
-
 .heading {
   text-align: center;
   padding-bottom: 2rem;
@@ -65,17 +64,24 @@ section {
   letter-spacing: 0.4rem;
 }
 
-
 .heading span {
   text-transform: uppercase;
   color: var(--black);
 }
 
+.section-heading {
+    font-size: 3.5rem;
+    color:var(--black);
+    margin-bottom: 40px;
+    text-transform: uppercase;
+    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Lato', sans-serif; 
+  }
 
 
 .header {
     padding: 20px;
-    position: sticky;
+    /* position: fixed; */
     top: 0;
     left: 0;
     right: 0;
@@ -86,7 +92,6 @@ section {
     justify-content: space-between;
     /* background: var(--light-color); */
     max-height: 80px;
-
   }
 
   .header.active{
@@ -145,18 +150,15 @@ section {
 
 
 
-
-
 /* Hero Section */
+
 .service-hero {
-    /* background-color: #ff6347; */
-    /* background-color: #f4f4f4; */
     color: var(--black);
     text-align: center;
     padding: 50px 20px;
-     /* background-image: url('https://img.freepik.com/free-photo/medium-shot-woman-getting-her-eyes-checked_23-2150801430.jpg?t=st=1725690796~exp=1725694396~hmac=70c57de1c8a3c61b583cda1bd44965dfc586d289abffc4d587c87629a4d6b992&w=996'); background-repeat: no-repeat;width:100%;background-size: cover; */
+  
+    /* background-image: url('https://t3.ftcdn.net/jpg/07/53/75/70/240_F_753757071_4RHgyalcEXN4iGqJZJQwIUpp8GAV6DZS.jpg'); background-repeat: no-repeat;width:100%;background-size: cover;height:80vh; */
   }
-
 
   .service-hero p{
     font-size: 16px;
@@ -171,22 +173,8 @@ section {
   }
 
 
-  
-  
-  /* Service Details Section */
-
-
-  .section-heading {
-    font-size: 3.5rem;
-    color:var(--black);
-    margin-bottom: 40px;
-    text-transform: uppercase;
-    /* font-family: 'Poppins', sans-serif; */
-    font-family: 'Lato', sans-serif; 
-  }
-
-
-  .service-details-container {
+ /* Service Details Section */
+ .service-details-container {
     border: 2px var(--orange);
     border-style: groove;
     display: flex;
@@ -239,165 +227,267 @@ section {
         padding: 21px;
     }
    }
-  
-  /* Service Procedures Section */
 
-.eye-testing-services {
-    /* background-color: #003366; */
-    padding: 47px 0px;
+   @media screen and (min-width:10px) {
+    .service-hero .heading{
+        font-size: 5rem;
+    }
+   }
+
+   
+
+
+
+
+   /* Phaco Surgery Description Section */
+
+.phaco-description-section {
+    background-color: #f3f3f3;
+    padding: 60px 20px;
+    font-family: 'Open Sans', sans-serif;
+    color: #333;
     text-align: center;
-    border-radius: 15px;
-    margin: 47px auto;
+    border-radius: 10px;
+    /* box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); */
+    margin-top: 30px;
+  }
+  
+  .container {
     max-width: 1200px;
+    margin: 0 auto;
   }
   
   
-  .services-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 30px;
-    align-items: start;
-  }
-  
-  .service-item {
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease-in-out;
-    height: 100%;
-
-  }
-
-
-  .learn-btn {
-    color: black;
+  .description-text {
     font-size: 16px;
-    border: 2px groove var(--orange);
-    padding: 4px 8px;
-    border-radius: 6px;
-    text-decoration: none;
-    font-weight: 500;
-    transition: all 0.3s ease;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    display: inline-block;
-}
-
-.learn-btn:hover {
-    background-color: var(--orange);
-    color: white;
-    transform: scale(1.05);
-    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
-    transition: all 0.3s ease; 
-    border: unset;
-}
-
-.learn-btn:active {
-    transform: scale(1);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
-}
-
-  
-  .service-item:hover {
-    transform: translateY(-10px);
+    color: #555;
+    line-height: 1.7;
+    max-width: 900px;
+    margin: 0 auto 40px auto;
   }
   
-  .service-item h3 {
+  .phaco-image-wrapper {
+    text-align: center;
+    margin-top: 20px;
+  }
+  
+  .phaco-image {
+    width: 100%;
+    max-width: 550px;
+    height: auto;
+    /* border-radius: 10px; */
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  }
+  
+  /* Responsive Design */
+  @media (max-width: 768px) {
+    .heading {
+      font-size: 2rem;
+    }
+    
+    .description-text {
+      font-size: 1.3rem;
+    }
+  
+    .phaco-image {
+      max-width: 90%;
+    }
+  }
+
+ .microphaco-section {
+      display: flex;
+      align-items: center;
+      padding: 20px;
+      background-color: #f7f9fc;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  }
+
+  .microphaco-image {
+      flex: 1;
+      max-width: 40%; /* Adjust the width as needed */
+      margin-right: 20px;
+  }
+
+  .microphaco-image img {
+      width: 100%;
+      border-radius: 10px;
+  }
+
+  .microphaco-content {
+      flex: 2;
+      max-width: 60%; /* Adjust the width as needed */
+  }
+
+  .microphaco-content h2 {
+      font-size: 28px;
+      margin-bottom: 15px;
+      color: #2c3e50;
+  }
+
+  .microphaco-content ul {
+      list-style-type: none;
+      padding-left: 0;
+      font-size: 16px;
+      color: #34495e;
+      line-height: 1.8;
+  }
+
+  .microphaco-content ul li {
+      margin-bottom: 10px;
+  }
+
+  .microphaco-content ul li strong {
+      color: #2980b9;
+  }
+
+  /* Responsive Styles */
+  @media (max-width: 768px) {
+      .microphaco-section {
+          flex-direction: column;
+      }
+
+      .microphaco-image {
+          margin-right: 0;
+          margin-bottom: 20px;
+          max-width: 100%;
+      }
+
+      .microphaco-content {
+          max-width: 100%;
+      }
+  }
+
+
+
+  
+
+  /* Benefits of Phaco Surgery Section */
+.phaco-benefits-section {
+    padding: 80px 20px;
+    font-family: 'poppins', sans-serif;
+    color: #333;
+    text-align: center;
+  }
+  
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  .card-heading {
     font-size: 2.2rem;
     color:var(--orange);
     margin-bottom: 15px;
   }
   
-  .service-item p {
-    font-size: 1.6rem;
-    color: #666;
-    margin-bottom: 20px;
-  }
-  
-  .service-item img {
-    width: 100%;
-    max-width: 300px;
-    height: auto;
-    border-radius: 10px;
-    transition: transform 0.3s ease-in-out;
-    /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); */
-  }
-  
-  .service-item img:hover {
-    transform: scale(1.05);
-  }
-
-
-
-
-
-
-
-
-/* Eye Specialist Section */
-.eye-specialists {
-    padding: 40px 10%;
-    /* background-color: #ff6347; */
-    text-align: center;
-  }
 
   
-  .doctor-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 30px;
-    align-items: start;
-
-
-    
-  }
-  
-  .doctor-card {
-    background-color: #ffffff;
-    padding: 15px;
-    border-radius: 12px;
-    /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
-    border: 2px var(--orange);
-    border-style: groove;
-    transition: transform 0.3s ease-in-out;
-    height: 100%;
-  }
-  
-  .doctor-card:hover {
-    transform: scale(1.05);
-    /* box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); */
-  }
-  
-  .doctor-image img {
-    width: 100%;
-    /* height: auto; */
-    width: 100%;
-    max-height: 300px;
-    object-fit: cover;
-    border-bottom: 2px solid #ddd;
-  }
-  
-  .doctor-info {
-    padding: 15px;
-  }
-  
-  .doctor-info h3 {
-    font-size: 22px;
-    margin-bottom: 10px;
-    color: #333;
-  }
-  
-  .doctor-info p {
+  .intro-text {
     font-size: 16px;
-    margin-bottom: 10px;
-    color: #666;
+    color: #555;
+    line-height: 1.7;
+    max-width: 850px;
+    margin: 0 auto 60px auto;
+    text-align: justify;
   }
   
+  .benefits-list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 15px;
+    margin-bottom: 60px;
+  }
   
+  .benefit-item {
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 12px;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
   
+  .benefit-item:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+  }
+ 
+  
+  .benefit-item p {
+    font-size: 16px;
+    color: #666;
+    line-height: 1.6;
+  }
+  
+  /* Grid Images */
+  .grid-images {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
+  }
+  
+  .grid-images img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    aspect-ratio: 1 / 1;
+    border-radius: 12px;
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  
+  .grid-images img:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+  }
+  
+  /* Responsive Design */
+  @media (max-width: 1024px) {
+   
+
+    .benefits-list {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+      }
+  
+    .grid-images {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .heading {
+      font-size: 2.4rem;
+    }
+  
+    .grid-images {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 10px;
+    }
+  
+  }
+  
+  @media (max-width: 576px) {
 
 
-  /* Service Recovery Section */
+    .benefits-list {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+      }
+
+    .grid-images {
+      grid-template-columns: 1fr;
+      gap: 8px;
+    }
+  
+    .benefit-item p {
+      font-size: 14px;
+    }
+  }
+
+
+
+   /* Service Recovery Section */
 .service-recovery {
     padding: 60px 10%;
     /* background-color: #f3f4f6; */
@@ -570,6 +660,7 @@ section {
     }
   }
   
+  
 
 
 
@@ -587,7 +678,12 @@ section {
 
 
 
-@media screen and (min-width: 900px) {
+  
+
+
+  
+
+  @media screen and (min-width: 900px) {
     .box4 {
       grid-column-start: 2;
       grid-column-end: 4;
@@ -609,11 +705,7 @@ section {
     }
   }
   
-  @media (max-width: 450px) {
-    html {
-      font-size: 50%;
-    }
-  }
+ 
   
   @media screen and (max-width: 850px) {
     .contact-us-section {
@@ -755,3 +847,11 @@ form button.submit-btn:hover {
   from {opacity: 0;}
   to {opacity: 1;}
 }
+
+
+
+
+
+
+
+
