--- a/services/service18.css
+++ b/services/service18.css
@@ -1,3 +1,4 @@
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Flow+Circular&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tilt+Neon&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap');
@@ -47,7 +48,7 @@ h1,h2,h3,h4,h5{
 
 section {
   padding: 2rem 9%;
-  /* margin-bottom: 3rem; */
+  margin-bottom: 3rem;
 }
 
 .light-bg {
@@ -236,6 +237,12 @@ section {
 
    
 
+
+
+
+
+
+   
 
 
 
