--- a/services/service3.css
+++ b/services/service3.css
@@ -47,7 +47,7 @@ h1,h2,h3,h4,h5{
 
 section {
   padding: 2rem 9%;
-  margin-bottom: 3rem;
+  /* margin-bottom: 3rem; */
 }
 
 .light-bg {
@@ -153,12 +153,35 @@ section {
 /* Hero Section */
 
 .service-hero {
-    /* background-color: #ff6347; */
-    /* background-color: #f4f4f4; */
+    position: relative;
     color: var(--black);
     text-align: center;
     padding: 50px 20px;
+
+
+    /* background-image: url('https://png.pngtree.com/thumb_back/fw800/background/20230514/pngtree-cataract-surgery-on-senior-patient-by-optometrist-and-male-optician-photo-image_52125174.jpg'); height: 80vh;background-repeat: no-repeat;width:100%;background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+    padding: 20px; */
   }
+
+  /* .service-hero::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2); 
+    z-index: 0;
+  } */
+
+
 
   .service-hero p{
     font-size: 16px;
