--- a/services/service4.css
+++ b/services/service4.css
@@ -47,7 +47,7 @@ h1,h2,h3,h4,h5{
 
 section {
   padding: 2rem 9%;
-  margin-bottom: 3rem;
+  /* margin-bottom: 3rem; */
 }
 
 .light-bg {
@@ -157,8 +157,31 @@ section {
     text-align: center;
     padding: 50px 20px;
   
-    /* background-image: url('https://t3.ftcdn.net/jpg/07/53/75/70/240_F_753757071_4RHgyalcEXN4iGqJZJQwIUpp8GAV6DZS.jpg'); background-repeat: no-repeat;width:100%;background-size: cover;height:80vh; */
+   
+/* 
+    background-image: url('https://t4.ftcdn.net/jpg/06/11/40/63/240_F_611406396_e34Ck5jqjZv64IZXTjha9tvRj8yaiYUN.jpg'); height: 80vh;background-repeat: no-repeat;width:100%;background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+    padding: 20px; */
   }
+
+  /* .service-hero::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); 
+    z-index: 0;
+  } */
+
+
 
   .service-hero p{
     font-size: 16px;
