--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h1,h2,h3,h4,h5{
 
 section {
   padding: 2rem 9%;
-  margin-bottom: 3rem;
+  padding-bottom: 3rem;
 }
 
 .light-bg {
@@ -234,6 +234,25 @@ section {
   text-align: center;
   padding: 2.5rem;
   cursor: pointer;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
+}
+
+.icons-container .icons:hover {
+  transform: scale(1.07);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+  background-color: #f0f8ff; /* Slight background change */
+  background-color: var(--orange);
+  border: unset;
+}
+
+.icons-container .icons:hover i {
+  /* color: #007bff; */
+  color: white;
+}
+
+.icons-container .icons:hover p {
+  /* color: #007bff;  */
+  color: white;
 }
 
 .icons-container .icons i {
@@ -927,7 +946,7 @@ section.footer {
 
 .faq-item {
   margin-bottom: 1rem;
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   border: 1px solid #ddd;
   /* border-radius: 6px; */
   overflow: hidden;
@@ -935,8 +954,8 @@ section.footer {
 
 .faq-question {
   width: 100%;
-  background-color:var(--orange);
-  color: white;
+  /* background-color:var(--orange); */
+  color: black;
   text-align: left;
   padding: 1.6rem;
   font-size: 1.6rem;
@@ -951,7 +970,7 @@ section.footer {
 
 .toggle-icon {
   font-size: 1.5rem;
-  color: #f5f5f5;
+  color: black;
   margin-left: 1rem;
   transform: rotate(90deg) scaleY(1.5);
   font-size: 1.5rem;
@@ -988,6 +1007,8 @@ section.footer {
 
 
 /* Popup container - hidden by default */
+
+
 .popup {
   display: none; /* Initially hidden */
   position: fixed;
